--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "react-scripts": "4.0.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^10.10.1",
+    "tailwindcss": "^2.2.19",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "set PORT=3007 && react-scripts start",
+    "start": "set PORT=3008 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
